// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button::ButtonLabel rendering should be match with snapshot 1`] = `
<span
  className="btn__label"
  data-testid="btn-label-default"
/>
`;

exports[`Button::ButtonLabel rendering should be match with snapshot 2`] = `
<span
  className="btn__label"
  data-testid="btn-label-custom-id"
/>
`;
